2002-10-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLog.m: Added GSPrintf()
	* Tools/defaults.m: Use GSPrintf()
	* Tools/pldes.m: ditto
	* Tools/plser.m: ditto
	* Tools/plmerge.m: ditto
	* Tools/plparse.m: ditto
	* Tools/sfparse.m: ditto

2002-10-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/GNUmakefile: revert ... can't build if base library isn't
	installed.

2002-10-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLog.m: Lots of documentation added.
	* Tools/GNUmakefile: build autogsdoc documentation automatically
	if possible.
	* Tools/AGSOutput.m: Make automatic cross references for functions.
	* Source/Docmakefile: Use handcrafted template files.  Document the
	path utilities file.
	* Documentation/Functions.gsdoc: Handcrafted template.
	* Documentation/TypesAndConstants.gsdoc: Handcrafted template.

2002-10-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSDebug.h: Make warn logs de-selectable at
	runtime by setting the NoWarn debug level.  Document.  Say that
	debug levels can be added by putting them in the GNU-Debug
	array in the defaults database.
	* Source/NSUserDefaults.m: Add contents of the GNU-Debug array to
	the set of active debug levels.
	* Tools/AGSParser.m: Updated with support for documenting macros.
	* Tools/AGSOutput.m: ditto
	* Tools/AGSHtml.m: ditto

2002-10-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Update logging after checks for results of memory
	allocation.
	* Source/NSTimeZone.m: Don't abort on failure to allocate memory ...
	just print a log and continue returning a null pointer.

2002-10-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: readContentsOfFile() fix use of atomic memory
	on GC systems ... problem noticed by Fred.

Sat Oct  5 19:53:03 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSData.m ([NSDataMappedFile
	-initWithContentsOfMappedFile:]): release self and return nil -
	rather than returning NO, if the path is bad.
