@@ -33,7 +33,11 @@ include ../config.mak
 
 # DTDs to install
 dtddir = $(GNUSTEP_RESOURCES)/DTDs
-DTD_FILES = plist-0_9.dtd gsdoc-0_6_5.dtd gsdoc-0_6_6.dtd gsdoc-0_6_7.dtd
+DTD_FILES = plist-0_9.dtd \
+	gsdoc-0_6_5.dtd \
+	gsdoc-0_6_6.dtd \
+	gsdoc-0_6_7.dtd \
+	gsdoc-1_0_0.dtd
 
 # DocTemplates to install
 doctemplatesdir = $(GNUSTEP_RESOURCES)/DocTemplates
